# fastapi-project-templete

./: .dockerignore  .env  .env.example  .env.middleware.example  .gitignore  ALEMBIC_README.md  DOCKER_README.md  Dockerfile  Dockerfile.production  MCP_USAGE.md  Makefile  README.md  SCHEMAS_README.md  STATUS.md  VERIFICATION.md  alembic.ini  build.sh  docker-compose.yaml  pyproject.toml  sitecustomize.py
alembic/: env.py
data/: .gitkeep  README.md
docs/: ALEMBIC_README.md  API.md  MCP_QUICK_REF.md  MCP_SSE_SERVER.md  MCP_USAGE.md  MIDDLEWARE.md  MIDDLEWARE_CONFIG.md  MIDDLEWARE_QUICK_REF.md  README.md
src/: app_factory.py  main.py  settings.py
src/admin/: __init__.py  product.py  user.py
src/core/: app.py  database.py  mcp_config.py  mcp_server.py  middleware_config.py
src/core/middleware/: __init__.py  audit.py  auth.py  cors.py  log.py  rate_limit.py  request_id.py  security.py  timing.py
src/log/: __init__.py  context.py  log.py
src/models/: __init__.py  base.py  product.py  user.py
src/repositories/: base.py  ral.py  redis.py  user.py
src/router/: __init__.py  product.py  user.py
src/schemas/: __init__.py  base.py  product.py  user.py
src/services/: base.py  ral.py  redis.py  user.py
src/utils/: str.py
test/: conftest.py
test/utils/: test_str.py
