[project]
name = "fastapiproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "fastapi>=0.120.1",
    "mcp>=1.19.0",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.3",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
    "slowapi>=0.1.9",
    "sqladmin[full]>=0.21.0",
    "sqlalchemy>=2.0.44",
    "sse-starlette>=3.0.2",
    "uvicorn>=0.38.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
